# cookbook

./: .env
python-app/: .gitignore  pyproject.toml  requirements-dev.txt
python-app/python_app/adapters/: asgi.py  cli.py  http.py
python-app/tests/: test_dummy.py
